fix: spacing for phone and md screens

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -132,7 +132,7 @@
   /* Global responsive text sizing for all p elements */
   p,
   li {
-    @apply text-xs md:text-sm lg:text-base;
+    @apply text-xs md:text-sm lg:text-sm text-card-foreground;
   }
 }
 
@@ -141,9 +141,9 @@
     @apply bg-slate-200 dark:bg-slate-900;
   }
   .tool-card-bg-grid {
-    @apply w-full break-inside-avoid mb-6 dark:bg-slate-900;
+    @apply w-full break-inside-avoid mb-[32px] bg-slate-100 dark:bg-slate-900;
   }
   .tool-content-card-bg-grid {
-    @apply w-full break-inside-avoid mb-6  bg-slate-200  dark:bg-slate-950;
+    @apply w-full break-inside-avoid mb-6    dark:bg-slate-950;
   }
 }
